{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 2171,
  "lineage": "0b1c0b8b-f238-dd72-34e8-731f74b91957",
  "resources": [
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:541478845275:instance/i-0adfecbd7aeb4e73f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adfecbd7aeb4e73f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0045ed38bbb7796f4",
            "private_dns": "ip-172-31-36-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.11",
            "public_dns": "ec2-18-234-57-231.compute-1.amazonaws.com",
            "public_ip": "18.234.57.231",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eac897648c192941",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Stack-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d136d042a92949c",
            "tags": {
              "Name": "stack-server-$(count.index)",
              "OwnerEmail": "mikeo.olukosi@gmail.com",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "stack-server-$(count.index)",
              "OwnerEmail": "mikeo.olukosi@gmail.com",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03eedcc0f249f973a"
            ]
          },
          "dependencies": [
            "module.EC2-BASE.aws_key_pair.Stack_KP",
            "module.EC2-BASE.aws_security_group.stack-sg",
            "module.EC2-BASE.data.template_file.bootstrap"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541478845275:security-group/sg-03eedcc0f249f973a",
            "description": "Stack IT Security Group For CliXX System",
            "egress": [],
            "id": "sg-03eedcc0f249f973a",
            "ingress": [],
            "name": "Stack-WebDMZ",
            "name_prefix": "",
            "owner_id": "541478845275",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebe1b889a03334ce"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "clixx-app-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-274951101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03eedcc0f249f973a",
            "security_group_rule_id": "sgr-082bd0ef5df6a1bf2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3506533668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03eedcc0f249f973a",
            "security_group_rule_id": "sgr-0cf0b08cd6309a35e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2007291878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03eedcc0f249f973a",
            "security_group_rule_id": "sgr-01822e97663d06b9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3487248659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03eedcc0f249f973a",
            "security_group_rule_id": "sgr-06693e13f0c988c3b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 2049,
            "id": "sgrule-73661054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03eedcc0f249f973a",
            "security_group_rule_id": "sgr-04a56d909817312db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-BASE",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1737173137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03eedcc0f249f973a",
            "security_group_rule_id": "sgr-0fc0488b24a9465a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2-BASE.aws_security_group.stack-sg"
          ]
        }
      ]
    }
  ]
}